# hap

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
.github/actions/setup-project/: action.yaml
.github/workflows/: ci.yml
hap/: mypy.py  server.py  tlv.py
hap/accessories/: __init__.py  base.py  characteristics.py  services.py
hap/backends/: __init__.py  base.py  file.py  memory.py
hap/crypto/: __init__.py  chacha20poly1305.py  ed22519.py  hkdf.py  srp.py
hap/http/: api.py  app.py  asgi.py  protocol.py  request.py  response.py  server.py
hap/http/api/: __init__.py  accessories.py  pairing.py
tests/: conftest.py  fixtures.py  test_accessories.py  test_backend_file.py  test_backend_memory.py  test_crypto_hkdf.py  test_crypto_srp.py  test_hap_accessories.py  test_http_pairing.py  test_http_server.py  test_memory_file.py  test_tlv.py
