[tool.poetry]
name = "hap"
version = "0.0.1"
description = "A toolset to create HomeKit accessories"
authors = ["Sigurd Ljødal <544451+ljodal@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
h11 = "^0.13.0"
cryptography = "^37.0.2"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
flake8-bugbear = "^22.4.25"
pep8-naming = "^0.12.1"
black = "^22.3.0"
isort = "^5.10.1"
pytest = "^7.1.2"
mypy = "^0.960"

[tool.poetry.group.dev.dependencies]
pytest-asyncio = "^0.19.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
