[tool.poetry]
name = "hap"
version = "0.0.1"
description = "A toolset to create HomeKit accessories"
authors = ["Sigurd Ljødal <544451+ljodal@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
cryptography = "^38.0.1"
h11 = "^0.14.0"
python = "^3.10"
typing-extensions = "^4.3.0"

[tool.poetry.group.dev.dependencies]
black = "^22.8.0"
flake8 = "^5.0.4"
flake8-bugbear = "^22.9.23"
isort = "^5.10.1"
mypy = "^0.981"
pep8-naming = "^0.13.2"
pytest = "^7.1.3"
pytest-asyncio = "^0.19.0"

[build-system]
requires = ["poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.mypy]
strict = true
show_error_codes = true
python_version = "3.10"
files = ["hap", "tests", "bin/*"]
plugins = "hap.mypy"
